feat: Variáveis de ambiente para as imagens utilizadas na seção de autenticação

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 REDIRECT_ROUTER_DEFAULT=/
+BANNER_IMAGE_SRC=/backgrounds/authentication_roads.jpg
+LIGHT_LOGO_SRC=/logos/gtots_principal_hor_margem.svg
+DARK_LOGO_SRC=/logos/gtots_preto_hor_margem.svg
+MOBILE_LIGHT_LOGO_SRC=/logos/gtots_principal_hor.svg
+MOBILE_DARK_LOGO_SRC=/logos/gtots_branco_hor.svg
