--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-hook-form": "^7.54.2",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^22.13.5",
