feat: Variáveis de ambiente referentes as rotas da aplicação

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-REDIRECT_ROUTER_DEFAULT=/
+REDIRECT_ROUTER_DEFAULT="/"
+AUTHENTICATION_ROUTE_PATH="/"
+SYSTEM_ROUTE_PATH="/"
 AUTH_SECRET=""
 HOST_API=""
 AUTH_TRUST_HOST=true
