--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
-REDIRECT_ROUTER_DEFAULT="/"
-AUTHENTICATION_ROUTE_PATH="/"
-SYSTEM_ROUTE_PATH="/"
-AUTH_SECRET=""
-HOST_API=""
+AUTH_SECRET="SECRET_KEY"
 AUTH_TRUST_HOST=true
-PATH_LOGIN_FOR_ACCESS_TOKEN=""
+
+HOST_API="http://sigma-api:8000"
+SECRET_KEY_ACCESS_TOKEN="SECRET_KEY"
