--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NODE_ENV=production next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
@@ -40,7 +40,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.24.2",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -55,7 +56,6 @@
     "eslint-config-next": "^15.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jsonwebtoken": "^9.0.2",
     "postcss": "^8",
     "prettier": "^3.5.2",
     "tailwindcss": "^3.4.1",
